# xiblint

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  NOTICE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
xiblint/: __main__.py  config.py  patch_element_tree.py  xibcontext.py  xibutils.py  xmlutils.py
xiblint/rules/: __init__.py  accessibility_format.py  accessibility_labels_for_image_buttons.py  accessibility_labels_for_images.py  accessibility_labels_for_text_with_placeholder.py  autolayout_frames.py  automation_identifiers.py  automation_identifiers_for_outlet_labels.py  color_assets.py  enforce_runtime_attributes.py  enforce_system_properties.py  named_colors.py  no_attributed_string_colors.py  no_simulated_metrics.py  no_trait_variations.py  no_view_controller_links_to_other_bundles.py  simulated_metrics_retina4_0.py  strict_color_names.py  strict_customization.py  strict_font_names.py  strict_font_sizes.py  strict_fonts.py  unavailable_classes.py  unavailable_custom_classes.py  unavailable_system_classes.py
