[metadata]
name = xiblint
version = attr: xiblint.__version__
description = Checks .xib and .storyboard files for compliance with best practices
license = apache2
url = https://github.com/lyft/xiblint
author = Ilya Konstantinov
author_email = ikonstantinov@lyft.com

[options]
install_requires = defusedxml>=0.5.0
packages = find:

[options.entry_points]
console_scripts =
    xiblint=xiblint.__main__:main

[flake8]
format = pylint
exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv
max-complexity = 10
max-line-length = 120

[pep8]
max-line-length = 120
